<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E2E2E0">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageAnuncio"
                android:layout_width="match_parent"
                android:layout_height="207dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/image_anuncio_context"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/textNombre"
                android:gravity="left"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/text_anuncio"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textFecha"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textStyle="italic"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="20dp"
                android:text="@string/fecha_anuncio"
                android:textSize="20sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>