<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_login_background_color"
    tools:context=".LogInFragment">

    <FrameLayout
        android:id="@+id/frameLayout_login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollView_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="UselessParent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/form_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">


                <TextView
                    android:id="@+id/textView_colaborador_carnet_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="130dp"
                    android:fontFamily="@font/helvetica_neue_ltstd_bd_7"
                    android:text="@string/fragment_login_title"
                    android:textColor="@color/fragment_login_title_color"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_colaborador_nombre_carnet_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/fragment_login_description"
                    android:textColor="@color/fragment_login_description_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView_colaborador_carnet_rate"
                    app:layout_constraintTop_toBottomOf="@+id/textView_colaborador_carnet_rate" />

                <EditText
                    android:id="@+id/editText_login_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="55dp"
                    android:layout_marginEnd="25dp"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:theme="@style/EditTextLoginColor"
                    android:hint="@string/fragment_login_email_hint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_colaborador_nombre_carnet_rate" />

                <EditText
                    android:id="@+id/editText_login_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/fragment_login_password_hint"
                    android:importantForAutofill="no"
                    android:theme="@style/EditTextLoginColor"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/editText_login_email"
                    app:layout_constraintStart_toStartOf="@+id/editText_login_email"
                    app:layout_constraintTop_toBottomOf="@+id/editText_login_email" />

                <Button
                    android:id="@+id/button_login_continue"
                    android:layout_width="135dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/fragment_login_continue_button"
                    android:text="@string/fragment_login_continue_button"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:textColor="#7B868C"
                    app:layout_constraintEnd_toEndOf="@+id/editText_login_password"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/editText_login_password"
                    app:layout_constraintTop_toBottomOf="@+id/editText_login_password" />

                <TextView
                    android:id="@+id/textView_login_problem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="160dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/fragment_login_loginProblem_text"
                    android:textSize="16sp"
                    android:textColor="#7B868C"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_login_continue"
                    app:layout_constraintVertical_bias="0.9" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </FrameLayout>

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/frameLayout_loginProgress_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/BLueAccent"
            android:visibility="visible" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>